force-app/main/default/objects/Tarea__c/Tarea__c.object-meta.xml
<CustomObject>
    <label>Tarea</label>
    <nameField>
        <label>Nombre de Tarea</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tareas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>