force-app/main/default/objects/Tarea__c/fields/Duracion__c.field-meta.xml
<CustomField>
    <fullName>Duracion__c</fullName>
    <formula>Fecha_fin__c - Fecha_inicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duracion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>