force-app/main/default/objects/Tarea__c/fields/EDT__c.field-meta.xml
<CustomField>
    <fullName>EDT__c</fullName>
    <label>EDT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>