force-app/main/default/objects/Tarea__c/fields/Es_camino_critico__c.field-meta.xml
<CustomField>
    <fullName>Es_camino_critico__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Es camino critico</label>
    <type>Checkbox</type>
</CustomField>