force-app/main/default/objects/Tarea__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No iniciado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Pendiente de resolución</fullName>
            </value>
            <value>
                <fullName>En subsanacion</fullName>
            </value>
            <value>
                <fullName>En licitacion</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>