force-app/main/default/objects/Tarea__c/fields/Fecha_fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin__c</fullName>
    <label>Fecha fin</label>
    <type>Date</type>
</CustomField>