force-app/main/default/objects/Tarea__c/fields/Gantt__c.field-meta.xml
<CustomField>
    <fullName>Gantt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gantt</label>
    <referenceTo>Gantt__c</referenceTo>
    <relationshipLabel>Tareas</relationshipLabel>
    <relationshipName>Tareas</relationshipName>
    <type>Lookup</type>
</CustomField>