force-app/main/default/objects/Tarea__c/fields/Hito__c.field-meta.xml
<CustomField>
    <fullName>Hito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hito</label>
    <referenceTo>Hito__c</referenceTo>
    <relationshipLabel>Tareas</relationshipLabel>
    <relationshipName>Tareas</relationshipName>
    <type>Lookup</type>
</CustomField>