force-app/main/default/objects/Tarea__c/fields/Id_tarea__c.field-meta.xml
<CustomField>
    <fullName>Id_tarea__c</fullName>
    <label>Id tarea</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>