force-app/main/default/objects/Tarea__c/fields/Predecesora__c.field-meta.xml
<CustomField>
    <fullName>Predecesora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predecesora</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Gantt__c</field>
            <operation>equals</operation>
            <valueField>Tarea__c.Gantt__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tarea__c</referenceTo>
    <relationshipLabel>Tareas</relationshipLabel>
    <relationshipName>Tareas</relationshipName>
    <type>Lookup</type>
</CustomField>