force-app/main/default/objects/Tarea__c/fields/Predecesoras__c.field-meta.xml
<CustomField>
    <fullName>Predecesoras__c</fullName>
    <inlineHelpText>Se deben cargar los ID tareas separados por coma</inlineHelpText>
    <label>Predecesoras</label>
    <length>200</length>
    <type>Text</type>
</CustomField>