force-app/main/default/objects/Tarea__c/fields/Presupuesto_base__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_base__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presupuesto base</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Proveedor__c</field>
            <operation>equals</operation>
            <valueField>Presupuesto_base__c.Proveedor__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Presupuesto_base__c</referenceTo>
    <relationshipLabel>Tareas</relationshipLabel>
    <relationshipName>Tareas</relationshipName>
    <type>Lookup</type>
</CustomField>