force-app/main/default/objects/Tarea__c/fields/Requiere_presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Requiere_presupuesto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere presupuesto?</label>
    <type>Checkbox</type>
</CustomField>