force-app/main/default/objects/Tarea__c/fields/Tarea_padre__c.field-meta.xml
<CustomField>
    <fullName>Tarea_padre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarea padre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Gantt__c</field>
            <operation>equals</operation>
            <valueField>$Source.Gantt__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tarea__c</referenceTo>
    <relationshipLabel>Tareas (Tarea padre)</relationshipLabel>
    <relationshipName>Tareas1</relationshipName>
    <type>Lookup</type>
</CustomField>