force-app/main/default/objects/Tarea__c/listViews/TAREAS_JAVIER.listView-meta.xml
<ListView>
    <fullName>TAREAS_JAVIER</fullName>
    <columns>NAME</columns>
    <columns>Gantt__c</columns>
    <columns>Presupuesto_base__c</columns>
    <columns>Hito__c</columns>
    <columns>Estado__c</columns>
    <filterScope>Mine</filterScope>
    <label>TAREAS-JAVIER</label>
</ListView>