force-app/main/default/objects/Tarea__c/listViews/TAREAS_SALESFORCE.listView-meta.xml
<ListView>
    <fullName>TAREAS_SALESFORCE</fullName>
    <columns>NAME</columns>
    <columns>Gantt__c</columns>
    <columns>Hito__c</columns>
    <columns>Presupuesto_base__c</columns>
    <columns>Estado__c</columns>
    <columns>Requiere_presupuesto__c</columns>
    <filterScope>Everything</filterScope>
    <label>TAREAS SALESFORCE</label>
</ListView>